# fastapi

./: alembic.ini  main.py  pyproject.toml
alembic/versions/: 0804715bccfc_.py  6f1dd2d6d39e_moving_is_active_column_profile_to_user_.py  7da246e57891_making_first_name_and_last_name_.py
api/: courses.py  users.py
api/utils/: course.py  user.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: course.py  profile.py  user.py
